--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーTARO YAMADA ポートフォリオ'>
-  <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='TARO YAMADAのポートフォリオサイトです。'>
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="WebデザイナーTARO YAMADA ポートフォリオ">
+  <meta property="og:url" content="URLが入る">
+  <meta property="og:description" content="TARO YAMADAのポートフォリオサイトです。">
   <meta property="og:image" content="img/ogp.png">
   <meta name="description" content="TARO YAMADAのポートフォリオサイトです" />
   <title>TARO YAMADA ポートフォリオ</title>
@@ -16,7 +16,7 @@
   <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="img/favicon.ico" />
-  <link rel=”canonical” href=”URLが入る” />
+  <link rel="canonical" href="URLが入る" />
 </head>
 
 <body>
@@ -197,6 +197,6 @@
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script type='text/javascript' src="js/script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
