--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <p class="works-info">PythonとMySQLを用いたGUI式簡易家計簿アプリ</p>
             </a>
             <a class="works-item" href="https://github.com/hibiki1228/sound_edit/tree/develop">
-              <div class="works-img"><img src="img/SoundIcon.png" alt="" /></div>
+              <div class="works-img"><img src="img/SoundIcon.jpg" alt="" /></div>
               <p class="works-name">音声ファイル編集</p>
               <p class="works-info">音声データの尺、音量変更、データ同士の合成をCLIで行うソフト</p>
             </a>
