--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
                   チームでのGithubを使った開発の経験があります。一人で開発する際もGithubを使っているので慣れています。</p>
               </div>
             </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/rust-social-wide.jpg" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">Rust</h3>
+                <p class="skill-text">
+                  最近最も学習している言語でサークルの方たちとテスト駆動の学習と合わせて学んでいます。</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
